; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_vdr.c_Seek.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_vdr.c_Seek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32, i64, i32 }

@FILE_COUNT = common dso_local global i32 0, align 4
@VLC_EGENERIC = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i64)* @Seek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Seek(%struct.TYPE_6__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  store %struct.TYPE_7__* %10, %struct.TYPE_7__** %6, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 8
  %15 = call i64 @__MIN(i64 %11, i32 %14)
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %5, align 8
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  store i64 %16, i64* %18, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = call i32 @FindSeekpoint(%struct.TYPE_6__* %19)
  store i32 0, i32* %7, align 4
  br label %21

21:                                               ; preds = %33, %2
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @FILE_COUNT, align 4
  %24 = sub nsw i32 %23, 1
  %25 = icmp ult i32 %22, %24
  br i1 %25, label %26, label %31

26:                                               ; preds = %21
  %27 = load i64, i64* %5, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i64 @FILE_SIZE(i32 %28)
  %30 = icmp sge i64 %27, %29
  br label %31

31:                                               ; preds = %26, %21
  %32 = phi i1 [ false, %21 ], [ %30, %26 ]
  br i1 %32, label %33, label %40

33:                                               ; preds = %31
  %34 = load i32, i32* %7, align 4
  %35 = call i64 @FILE_SIZE(i32 %34)
  %36 = load i64, i64* %5, align 8
  %37 = sub nsw i64 %36, %35
  store i64 %37, i64* %5, align 8
  %38 = load i32, i32* %7, align 4
  %39 = add i32 %38, 1
  store i32 %39, i32* %7, align 4
  br label %21

40:                                               ; preds = %31
  %41 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @SwitchFile(%struct.TYPE_6__* %41, i32 %42)
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %47, label %45

45:                                               ; preds = %40
  %46 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %46, i32* %3, align 4
  br label %61

47:                                               ; preds = %40
  %48 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %49 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = load i64, i64* %5, align 8
  %52 = load i32, i32* @SEEK_SET, align 4
  %53 = call i32 @lseek(i32 %50, i64 %51, i32 %52)
  %54 = icmp ne i32 %53, -1
  br i1 %54, label %55, label %57

55:                                               ; preds = %47
  %56 = load i32, i32* @VLC_SUCCESS, align 4
  br label %59

57:                                               ; preds = %47
  %58 = load i32, i32* @VLC_EGENERIC, align 4
  br label %59

59:                                               ; preds = %57, %55
  %60 = phi i32 [ %56, %55 ], [ %58, %57 ]
  store i32 %60, i32* %3, align 4
  br label %61

61:                                               ; preds = %59, %45
  %62 = load i32, i32* %3, align 4
  ret i32 %62
}

declare dso_local i64 @__MIN(i64, i32) #1

declare dso_local i32 @FindSeekpoint(%struct.TYPE_6__*) #1

declare dso_local i64 @FILE_SIZE(i32) #1

declare dso_local i32 @SwitchFile(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @lseek(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
